--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "node-sass": "^4.7.2",
+    "node-sass-chokidar": "^0.0.3",
+    "npm-run-all": "^4.1.2",
     "path": "^0.12.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -12,7 +15,11 @@
     "react-scripts": "1.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "build-css": "node-sass-chokidar src/styles/ -o src/styles/css",
+    "watch-css": "yarn run build-css && node-sass-chokidar src/styles -o src/styles/css --watch --recursive",
+    "start-js": "react-scripts start",
+    "start-node": "nodemon server/main.js",
+    "start": "npm-run-all -p watch-css start-js start-node",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
